--- a/src/pages/receptionist_pages/hospital_settings/hospital_settings.module.css
+++ b/src/pages/receptionist_pages/hospital_settings/hospital_settings.module.css
@@ -5,7 +5,7 @@
     width: 100dvw;
     margin: 0;
     padding: 0;
-    background-color: #121417;
+    background-color: var(--bg);
     overflow-y: hidden;
 }
 
